--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/userListView" />
 
     <Button
-        android:id="@+id/joinButton"
+        android:id="@+id/addButton"
         android:layout_width="157dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
